--- a/resources/assets/hua_ji_mod/lang/en_US.lang
+++ b/resources/assets/hua_ji_mod/lang/en_US.lang
@@ -3,4 +3,6 @@ item.hua_ji_mod.hua_ji_ingot.name=Hua Ji Ingot
 item.hua_ji_mod.hua_ji_apple.name=Hua Ji Apple
 
 tile.hua_ji_mod.hua_ji_block.name=Hua Ji Block
-tile.hua_ji_mod.hua_ji_block_ingot.name=Hua Ji Ingot Block
+tile.hua_ji_mod.hua_ji_ingot_block.name=Hua Ji Ingot Block
+tile.hua_ji_mod.hua_ji_ore.name=Hua Ji Ore
+tile.hua_ji_mod.hua_ji_ore_nether.name=Hua Ji Ore
